--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@mui/icons-material": "^5.15.19",
     "@mui/material": "^5.15.19",
     "bootstrap": "^5.3.3",
+    "framer-motion": "^11.2.10",
     "history": "^5.3.0",
+    "react-animate-on-scroll": "^2.1.9",
     "react-bootstrap": "^2.10.2",
     "react-router-dom": "^6.23.1"
   }
