--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@gsap/react": "^2.1.1",
     "@mui/icons-material": "^5.15.19",
     "@mui/material": "^5.15.19",
     "bootstrap": "^5.3.3",
     "framer-motion": "^11.2.10",
+    "gsap": "^3.12.5",
     "history": "^5.3.0",
     "lucide-react": "^0.387.0",
     "react-animate-on-scroll": "^2.1.9",
