--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@gsap/react": "^2.1.1",
     "@mui/icons-material": "^5.15.19",
     "@mui/material": "^5.15.19",
+    "aos": "^2.3.4",
     "bootstrap": "^5.3.3",
     "framer-motion": "^11.2.10",
     "gsap": "^3.12.5",
