--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "lucide-react": "^0.387.0",
     "react-animate-on-scroll": "^2.1.9",
     "react-bootstrap": "^2.10.2",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "react-simple-typewriter": "^5.0.1"
   }
 }
