--- a/package.json
+++ b/package.json
@@ -26,13 +26,25 @@
     "@mui/icons-material": "^5.15.19",
     "@mui/material": "^5.15.19",
     "aos": "^2.3.4",
+    "axios": "^1.7.2",
+    "body-parser": "^1.20.2",
     "bootstrap": "^5.3.3",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
     "framer-motion": "^11.2.10",
     "gsap": "^3.12.5",
     "history": "^5.3.0",
     "lucide-react": "^0.387.0",
+    "mongoose": "^8.4.1",
+    "nodemon": "^3.1.3",
     "react-animate-on-scroll": "^2.1.9",
     "react-bootstrap": "^2.10.2",
-    "react-router-dom": "^6.23.1"
-  }
+    "react-router-dom": "^6.23.1",
+    "web-vitals": "^4.1.1"
+  },
+  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+  "main": "vite.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
