--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "tailwindcss": "^3.4.6",
     "vite": "^5.2.0"
   },
   "dependencies": {
@@ -25,6 +26,7 @@
     "@gsap/react": "^2.1.1",
     "@mui/icons-material": "^5.15.19",
     "@mui/material": "^5.15.19",
+    "@reduxjs/toolkit": "^2.2.6",
     "aos": "^2.3.4",
     "axios": "^1.7.2",
     "body-parser": "^1.20.2",
@@ -35,11 +37,15 @@
     "gsap": "^3.12.5",
     "history": "^5.3.0",
     "lucide-react": "^0.387.0",
+    "moment": "^2.30.1",
     "mongoose": "^8.4.1",
     "nodemon": "^3.1.3",
     "react-animate-on-scroll": "^2.1.9",
     "react-bootstrap": "^2.10.2",
+    "react-icons": "^5.2.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
+    "react-toastify": "^10.0.5",
     "web-vitals": "^4.1.1"
   },
   "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
